added logo to landing page

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <body>
 
     <center>
+        <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" alt="vD Logo">
         <h3 class="headerTitle"> 
-            This site will be updated over time. <br>Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #fafafa;" > Discord</a>
+            This site will be updated over time. <br>Join our <a class="discord_id" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" > Discord</a>
         </h3>
+
+    
     </center>
 
     <!-- Content -->
