updated font family to Poppin

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>Voltic Development | Home</title> 
@@ -19,13 +20,16 @@
 <body>
 
     <center>
-        <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" alt="vD Logo">
+        <div class="content">
+            <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" alt="vD Logo">
         <h3 class="headerTitle"> 
-            This site will be updated over time. <br>Join our <a class="discord_id" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" > Discord</a>
+            This site will be updated over time. <br>Join our <a class="discord_id" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </h3>
+        </div>
 
     
     </center>
+
 
     <!-- Content -->
     <script src="/assets/js/index.js"></script> 
