added better working updated styling

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
 
     <center>
+        
         <div class="content">
             <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" alt="vD Logo">
         <h3 class="headerTitle"> 
-            This site will be updated over time. <br>Join our <a class="discord_id" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
+            Our website will be updated over time. <br>Join our <a class="discord_id" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </h3>
         </div>
 
