--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="./assets/img/vlogo512x512.png">
     <link rel="manifest" href="site.webmanifest"> 
     <link rel="icon" href="./assets/img/vlogo512x512.png"> 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -34,7 +34,7 @@
 
 
     <!-- Content -->
-    <script src="/assets/js/index.js"></script> 
+    <script src="/assets/js/index.js" type="text/javascript"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
