small change to index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         <div class="content">
             <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" draggable="false" alt="vD Logo">
+            <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
         <h3 class="headerTitle"> 
             Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </h3><br>
