updated staff section and style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" draggable="false" alt="vD Logo">
             <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
         <h3 class="headerTitle"> 
-            Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
+            Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </h3><br>
         <div class="flip-card">
             <div class="flip-card-inner">
@@ -34,34 +34,37 @@
                 <p>We are recruiting!</p>
               </div>
               <div class="flip-card-back">
-                We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4;" >Discord</a> For more information
+                We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >Discord</a> For more information
               </div>
             </div>
-          </div><br>
           </div>
-            <h4 class="staffsectionTitle">Development Team</h4>
+          </div>
+            <section class="staffTeam">
+              <h4 class="staffsectionTitle">Development Team</h4>
+            <br>
+            <br>
 
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                
-                <div class="flip-card-front">
-                  <img src="http://cdn.mythbot.org/file/RwxAP.gif" class="staffImg" alt="JoKeR#0001">
-                  <p>JoKeR#0001</p>
-                  <p>⌜👑⌟︲CEO︲[Owner]</p>
+              <div class="card" style="width: 17.5rem;">
+                <img src="http://cdn.mythbot.org/file/pUaBt.gif" class="card-img-top" alt="JoKeR#0001">
+                <div class="card-body">
+                  <h5 class="card-title">JoKeR#0001</h5>
+                  <p class="card-text">Relax, Have a coffee!</p>
                 </div>
-                <div class="flip-card-back">
-                    <img src="http://cdn.mythbot.org/file/RwxAP.gif" class="staffImg" alt="JoKeR#0001"><br>
-                    <a class="card-title" href="https://discord.gg/Q6ZSW63Fpw">JoKeR#0001</a>
-                    <p class="card-text"">Relax, Have a coffee!</p>
-                    <p class="card-text"><small >⌜👑⌟︲CEO︲[Owner]</small></p>
+                <ul class="staffRoles">
+                  <p>Founder</p>
+                  <p>Lead Developer</p>
+                </ul>
+                <div class="card-body" role="group" aria-label="Basic mixed styles example">
+                  <a type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                  <a type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a>
+                  <a type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;Projects</a>
                 </div>
               </div>
-            </div>
+            </section>
             <br>
+            <br>                    
+            <br>                    
             <br>
-            <br>
-            <br>
-
         </div>  
         <div class="d-flex flex-wrap justify-content-between align-items-center " >
           <div class="col-md-4 d-flex align-items-center">
