updated JoKeR#0001 Staff card.

--- a/index.html
+++ b/index.html
@@ -43,21 +43,18 @@
               <h4 class="staffsectionTitle">Development Team</h4>
             <br>
             <br>
-
               <div class="card" style="width: 17.5rem;">
-                <img src="http://cdn.mythbot.org/file/pUaBt.gif" class="card-img-top" alt="JoKeR#0001">
+                <img src="http://cdn.mythbot.org/img/MNcv3.gif" class="card-img-top" alt="JoKeR#0001">
                 <div class="card-body">
                   <h5 class="card-title">JoKeR#0001</h5>
                   <p class="card-text">Relax, Have a coffee!</p>
+                  <p class="staffRoles">Founder/Lead Developer</p>
                 </div>
-                <ul class="staffRoles">
-                  <p>Founder</p>
-                  <p>Lead Developer</p>
-                </ul>
                 <div class="card-body" role="group" aria-label="Basic mixed styles example">
-                  <a type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-                  <a type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a>
-                  <a type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;Projects</a>
+                  <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                  <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
+                  <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
+                  <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
                 </div>
               </div>
             </section>
