updated dev logos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <br>
             <br>
               <div class="card" style="width: 17.5rem;">
-                <img src="http://cdn.mythbot.org/img/MNcv3.gif" class="card-img-top" alt="JoKeR#0001">
+                <img src="http://cdn.mythbot.org/img/0FoIv.gif" class="card-img-top" alt="JoKeR#0001">
                 <div class="card-body">
                   <h5 class="card-title">JoKeR#0001</h5>
                   <p class="card-text">Relax, Have a coffee!</p>
