updated image urls

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <center>
         
         <div class="content">
-            <img class="logoImg" src="http://cdn.mythbot.org/file/J0G9D.png" draggable="false" alt="vD Logo">
+            <img class="logoImg" src="https://i.imgur.com/hdbKsop.png" draggable="false" alt="vD Logo">
             <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
         <h3 class="headerTitle"> 
             Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
@@ -44,7 +44,7 @@
             <br>
             <br>
               <div class="card" style="width: 17.5rem;">
-                <img src="http://cdn.mythbot.org/img/0FoIv.gif" class="card-img-top" alt="JoKeR#0001">
+                <img src="https://i.imgur.com/Em2KuzZ.gif" class="card-img-top" alt="JoKeR#0001">
                 <div class="card-body">
                   <h5 class="card-title">JoKeR#0001</h5>
                   <p class="card-text">Relax, Have a coffee!</p>
