added more assets, fixed img direct

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Voltic Development | Home"> 
     <meta property="og:url" content="">  
-    <meta property="og:image" content="./assets/img/vlogo512x512.png">  
+    <meta property="og:image" content="./assets/img/vlogo.png">  
     <meta property="og:type" content="">
-    <link rel="apple-touch-icon" href="./assets/img/vlogo512x512.png">
+    <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
     <link rel="manifest" href="site.webmanifest"> 
-    <link rel="icon" href="./assets/img/vlogo512x512.png"> 
+    <link rel="icon" href="./assets/img/vlogo.png"> 
     <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="theme-color" content="#fafafa">
 </head>
@@ -22,7 +22,7 @@
 
     <center>
         <div class="content">
-            <img class="logoImg" src="./assets/img/vlogo512x512.png" draggable="false" alt="vD Logo">
+            <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
             <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
         <h3 class="headerTitle"> 
             Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
