removed old comments

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 
 <body>
 
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar sticky-top navbar-dark bg-dark">
     <a class="navbar-brand" href="https://voltic.thedev.id">
       <img src="./assets/img/vlogo.png" width="30" height="30" class="d-inline-block align-top" alt="vlogo">
       Voltic Development
-      <!-- <div class="nav_text">Voltic Development</div> -->
     </a>
     <!-- Navbar content -->
-
   </nav> 
   <div class="container">
     <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
@@ -47,7 +45,7 @@
             </div>
           </div>
         </div>
-<br><br>
+<br><br><br>
         <!-- Staff Team -->
         <section class="staffTeam">
           <h4 class="staffsectionTitle">Development Team</h4>
