--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
             </div>
           </div>
         </section>
+        
+  </div><br><br><br><br><br><br>
+  <div class="d-flex flex-wrap justify-content-between align-items-center " >
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
+      </a>
+      <span class="text-muted" style="color: #97A9B4;">© 2017 Voltic Development, Inc</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
+      <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
+    </ul>
+    
   </div>
   
   
