added placeholder assets, html & css

--- a/index.html
+++ b/index.html
@@ -48,21 +48,75 @@
 <br><br><br>
         <!-- Staff Team -->
         <section class="staffTeam">
-          <h4 class="staffsectionTitle">Development Team</h4>
+          <h4 class="staffsectionTitle">Staff Team</h4>
         <br>
         <br>
-          <div class="card" style="width: 15.3rem;">
-            <img src="./assets/img/staff/joker.gif" class="card-img-top" alt="JoKeR#0001">
-            <div class="card-body">
-              <h5 class="card-title">JoKeR#0001</h5>
-              <p class="card-text">Relax, Have a coffee!</p>
-              <p class="staffRoles">Founder/Lead Developer</p>
-            </div>
-            <div class="card-body" role="group" aria-label="Basic mixed styles example">
-              <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-              <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
-              <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-              <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                   <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 15.3rem;">
+                  <img src="./assets/img/staff/joker.gif" class="card-img-top" alt="JoKeR#0001">
+                  <div class="card-body">
+                    <h5 class="card-title">JoKeR#0001</h5>
+                    <p class="card-text">Relax, Have a coffee!</p>
+                    <p class="staffRoles">Founder/Lead Developer</p>
+                  </div>
+                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
+                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
+                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
+                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15.3rem;">
+                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
+                  <div class="card-body">
+                    <h5 class="card-title">Vacant</h5>
+                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="staffRoles">Administrator</p>
+                  </div>
+                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
+                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
+                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
+                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15.3rem;">
+                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
+                  <div class="card-body">
+                    <h5 class="card-title">Vacant</h5>
+                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="staffRoles">Moderator</p>
+                  </div>
+                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
+                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
+                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
+                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" style="width: 15.3rem;">
+                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
+                  <div class="card-body">
+                    <h5 class="card-title">Vacant</h5>
+                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="staffRoles">Moderator</p>
+                  </div>
+                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
+                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
+                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
+                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
+                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
