--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
                     <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
                     <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
                   </div>
                 </div>
               </div>
@@ -74,14 +74,14 @@
                   <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
                   <div class="card-body">
                     <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="card-text">Some cool bio!</p>
                     <p class="staffRoles">Administrator</p>
                   </div>
                   <div class="card-body" role="group" aria-label="Basic mixed styles example">
                     <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
                     <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
                     <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
                   </div>
                 </div>
               </div>
@@ -90,14 +90,14 @@
                   <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
                   <div class="card-body">
                     <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="card-text">Some cool bio!</p>
                     <p class="staffRoles">Moderator</p>
                   </div>
                   <div class="card-body" role="group" aria-label="Basic mixed styles example">
                     <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
                     <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
                     <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
                   </div>
                 </div>
               </div>
@@ -106,14 +106,14 @@
                   <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
                   <div class="card-body">
                     <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Inset BIO Here!</p>
+                    <p class="card-text">Some cool bio!</p>
                     <p class="staffRoles">Moderator</p>
                   </div>
                   <div class="card-body" role="group" aria-label="Basic mixed styles example">
                     <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
                     <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
                     <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <!-- <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a> -->
+                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
                   </div>
                 </div>
               </div>
@@ -121,7 +121,7 @@
           </div>
         </section>
         
-  </div><br><br><br><br><br><br>
+  </div><br><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " >
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
