added buttons to nav bar, edited style.css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
       Voltic Development
     </a>
     <!-- Navbar content -->
+    <button type="button" class="btn btn-dark">Home</button>
+    <button type="button" class="btn btn-dark">Projects</button>
+    <button type="button" class="btn btn-dark">Support Us</button>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        More
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="https://discord.gg/Q6ZSW63Fpw">Discord</a></li>
+        <li><a class="dropdown-item" href="/index.html">About Us</a></li>
+        <li><a class="dropdown-item" href="/index.html">Contact Us</a></li>
+      </ul>
+    </div>
   </nav> 
   <div class="container">
     <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
