--- a/index.html
+++ b/index.html
@@ -20,26 +20,17 @@
 
 <body>
 
-  <nav class="navbar sticky-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://voltic.thedev.id">
-      <img src="./assets/img/vlogo.png" width="30" height="30" class="d-inline-block align-top" alt="vlogo">
-      Voltic Development
-    </a>
-    <!-- Navbar content -->
-    <button type="button" class="btn btn-dark">Home</button>
-    <button type="button" class="btn btn-dark">Projects</button>
-    <button type="button" class="btn btn-dark">Support Us</button>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-        More
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="https://discord.gg/Q6ZSW63Fpw">Discord</a></li>
-        <li><a class="dropdown-item" href="/index.html">About Us</a></li>
-        <li><a class="dropdown-item" href="/index.html">Contact Us</a></li>
+  <div class="max-w-8xl mx-auto container z-50 sticky top-0 bg-[#0A131F] dark:bg-[#0A0F16] border-b-2 border-[#0F1A27] dark:border-[#0E141D] py-4">
+    <div class="headerLogo d-flex flex-wrap align-items-center justify-content-lg-start">
+      <a class="navbar-brand" href="/">
+        <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-top" style="border-radius: 50rem;margin-left: 1.5rem;margin-right: 27rem;">
+      </a>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
+        <li><a href="https://joker.is-a.dev" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;
       </ul>
     </div>
-  </nav> 
+</div>
   <div class="container">
     <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
             <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
@@ -60,79 +51,25 @@
         </div>
 <br><br><br>
         <!-- Staff Team -->
-        <section class="staffTeam">
           <h4 class="staffsectionTitle">Staff Team</h4>
         <br>
         <br>
-                   <div class="container">
-            <div class="row">
-              <div class="col">
-                <div class="card" style="width: 15.3rem;">
-                  <img src="./assets/img/staff/joker.gif" class="card-img-top" alt="JoKeR#0001">
-                  <div class="card-body">
-                    <h5 class="card-title">JoKeR#0001</h5>
-                    <p class="card-text">Relax, Have a coffee!</p>
-                    <p class="staffRoles">Founder/Lead Developer</p>
-                  </div>
-                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
-                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
-                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
-                  </div>
+        <div class="endPoints">
+          <div class="card text-white bg-dark" ">
+             <div class="card-header" style="background-color: #1a2535;">
+                <i style="color: #1DA1F2;"  class="fab fa-discord"></i> JoKeR#0001
                 </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 15.3rem;">
-                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
-                  <div class="card-body">
-                    <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Some cool bio!</p>
-                    <p class="staffRoles">Administrator</p>
-                  </div>
-                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
-                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
-                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 15.3rem;">
-                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
-                  <div class="card-body">
-                    <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Some cool bio!</p>
-                    <p class="staffRoles">Moderator</p>
-                  </div>
-                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
-                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
-                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card" style="width: 15.3rem;">
-                  <img src="./assets/img/voltic-pholder.png" class="card-img-top" alt="JoKeR#0001">
-                  <div class="card-body">
-                    <h5 class="card-title">Vacant</h5>
-                    <p class="card-text">Some cool bio!</p>
-                    <p class="staffRoles">Moderator</p>
-                  </div>
-                  <div class="card-body" role="group" aria-label="Basic mixed styles example">
-                    <a href="https://discord.gg/Q6ZSW63Fpw" type="button" class="btn_discord" ><i class="fab fa-discord"></i>&nbsp;Discord</a>
-                    <a href="https://joker.is-a.dev" type="button" class="btn_portfolio" ><i class="far fa-address-card"></i>&nbsp;Portfolio</a><br>
-                    <a href="https://github.com/JoKeRxTD" type="button" class="btn_projects" ><i class="fab fa-github"></i>&nbsp;Projects</a>
-                    <a href="https://api.mythbot.org" type="button" class="btn_projects" ><i class="fas fa-project-diagram"></i>&nbsp;My EndPoints</a>
-                  </div>
-                </div>
+                <div class="card-body" style="background-color: #0e141d;"><br>
+                <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
+                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
+                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
+                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #1DA1F2;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
+                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
+                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
               </div>
             </div>
-          </div>
-        </section>
+        </div>
         
   </div><br><br><br><br>
   <div class="d-flex flex-wrap justify-content-between align-items-center " >
@@ -143,10 +80,10 @@
       <span class="text-muted" style="color: #97A9B4;">© 2017 Voltic Development, Inc</span>
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
-      <li class="ms-3"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
-      <li class="ms-3"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
+    <ul class="col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="btn btn-outline-dark"><a class="text-muted" href="https://discord.gg/Q6ZSW63Fpw"><i class="fab fa-discord"></i></a></li>
+      <li class="btn btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
+      <li class="btn btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="fab fa-github"></i></a></li>
       <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
     </ul>
     
