final update for today, added new theme & restyled staff & nav

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
   <div class="max-w-8xl mx-auto container z-50 sticky top-0 bg-[#0A131F] dark:bg-[#0A0F16] border-b-2 border-[#0F1A27] dark:border-[#0E141D] py-4">
     <div class="headerLogo d-flex flex-wrap align-items-center justify-content-lg-start">
       <a class="navbar-brand" href="/">
-        <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-top" style="border-radius: 50rem;margin-left: 1.5rem;margin-right: 27rem;">
+        <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-top" style="border-radius: 50rem;">
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <li><a href="https://joker.is-a.dev" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
+        <li><a href="https://voltic.thedev.id" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
+        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" ><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;
       </ul>
     </div>
 </div>
   <div class="container">
     <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
-            <h2 class="headerTitle" style="text-decoration: none; color: #97A9B4;"> Voltic Development</h2><br>
+            <h2 class="headerTitle" style="text-decoration: none; color: #fafafa;"> Voltic Development</h2><br>
         <h3 class="headerTitle"> 
             Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </h3>
@@ -42,14 +43,14 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <p>We are recruiting!</p>
+              <p>We are recruiting!<br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
             </div>
             <div class="flip-card-back">
               We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >Discord</a> For more information
             </div>
           </div>
         </div>
-<br><br><br>
+<br><br><br><br>
         <!-- Staff Team -->
           <h4 class="staffsectionTitle">Staff Team</h4>
         <br>
@@ -57,16 +58,47 @@
         <div class="endPoints">
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-                <i style="color: #1DA1F2;"  class="fab fa-discord"></i> JoKeR#0001
+                <i style="color: #7289DA;"  class="fab fa-discord"></i> JoKeR#0001
+                </div>
+                <div class="card-body" style="background-color: #0e141d;"><br>
+                <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br>
+                <center><p class="card-text" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"></span></p></center><br>
+                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
+                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
+                <a href="https://www.youtube.com/channel/UCrQmJZuXR1G0ueq8Svmqsng" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
+                <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+              </div>
+            </div>
+          <div class="card text-white bg-dark" ">
+             <div class="card-header" style="background-color: #1a2535;">
+                <i style="color: #7289DA;"  class="fab fa-discord"></i> Vacant
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
-                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
-                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #1DA1F2;"  class="fab fa-discord"></i>&nbsp;Discord</a>
-                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
-                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
-                <a href="https://developer.twitter.com/en" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+                <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_1" style="color: #fafafa;">Some cool bio here</span></p></center><br>
+                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+              </div>
+            </div>
+          <div class="card text-white bg-dark" ">
+             <div class="card-header" style="background-color: #1a2535;">
+                <i style="color: #7289DA;"  class="fab fa-discord"></i> Vacant
+                </div>
+                <div class="card-body" style="background-color: #0e141d;"><br>
+                <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
+                <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_2">Some cool bio here</span></p></center><br>
+                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
               </div>
             </div>
         </div>
