style update, logo resize, some text color changes

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
 </div>
   <div class="container">
-    <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vD Logo">
-            <h2 class="headerTitle" style="text-decoration: none; color: #fafafa;"> Voltic Development</h2><br>
-        <h3 class="headerTitle"> 
-            Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
-        </h3>
+    <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo">
+            <h2 class="headerTitle" style="text-decoration: none; color: #7289DA;">Voltic Development</h2><br>
+        <h6 class="headerTitle"> 
+            Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
+        </h5>
 <br>
       <!-- Recruiting Box -->
         <div class="flip-card">
@@ -45,8 +45,8 @@
             <div class="flip-card-front">
               <p>We are recruiting!<br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
             </div>
-            <div class="flip-card-back">
-              We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >Discord</a> For more information
+            <div class="flip-card-back" style="text-decoration: none; color: #97A9B4; font-weight: bolder;">
+              We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
             </div>
           </div>
         </div>
