added mobile responsive 1272px, 1049px, 841px, 686px, 375px

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
     <link rel="manifest" href="site.webmanifest"> 
     <link rel="icon" href="./assets/img/vlogo.png"> 
+    <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
+    <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./assets/js/index.js" type="text/javascript"></script> 
 </head>
@@ -54,7 +56,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <p>We are recruiting!<br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
+              <p>We are recruiting! <br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
             </div>
             <div class="flip-card-back" style="text-decoration: none; color: #97A9B4; font-weight: bolder;">
               We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
@@ -73,13 +75,13 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br>
-                <center><p class="card-text" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"></span></p></center><br>
-                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
-                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
-                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
-                <a href="https://www.youtube.com/channel/UCrQmJZuXR1G0ueq8Svmqsng" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
-                <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+                <center><p class="card-ext" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"alt="status"></span></p></center><br>
+                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"alt="portfolio"></i>&nbsp;</a>
+                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" alt="github"class="fab fa-github"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;" alt="discord" class="fab fa-discord"></i>&nbsp;</a>
+                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" alt="twitter"class="fab fa-twitter"></i>&nbsp;</a>
+                <!-- <a href="https://www.youtube.com/channel/UCrQmJZuXR1G0ueq8Svmqsng" class="btn btn-outline-dark"><i style="color: #FF0000;"alt="youtube" class="fab fa-youtube"></i>&nbsp;</a> -->
+                <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;"alt="my endpoints" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
           <div class="card text-white bg-dark" ">
@@ -89,12 +91,12 @@
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
                 <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_1" style="color: #fafafa;">Some cool bio here</span></p></center><br>
-                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a>
+                <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a> -->
               </div>
             </div>
           <div class="card text-white bg-dark" ">
@@ -104,12 +106,12 @@
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
                 <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_2">Some cool bio here</span></p></center><br>
-                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Portfolio</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;Github</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;Twitter</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;Youtube</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;API</a>
+                <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a>
+                <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a> -->
               </div>
             </div>
         </div>
